--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.FoodPlanner" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="colorPrimary">@color/md_theme_dark_primary</item>
         <item name="colorOnPrimary">@color/md_theme_dark_onPrimary</item>
         <item name="colorSecondary">@color/md_theme_dark_secondary</item>
@@ -8,7 +8,7 @@
     </style>
 
     <style name="splashScreenTheme" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_screen_dark_mode</item>
         <item name="windowSplashScreenBackground">@color/md_theme_dark_primary</item>
         <item name="postSplashScreenTheme">@style/Theme.FoodPlanner</item>
     </style>
