--- a/app/src/main/res/navigation/nav_grav.xml
+++ b/app/src/main/res/navigation/nav_grav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.foodplanner.ui.home.HomeFragment"
+        android:name="com.example.foodplanner.ui.login.LoginFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
