--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,19 +5,28 @@
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_secondary">#4A635E</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#75F8E3</color>
+    <color name="md_theme_light_onPrimaryContainer">#00201C</color>
+    <color name="md_theme_light_secondaryContainer">#CDE8E1</color>
+    <color name="md_theme_light_onSecondaryContainer">#06201C</color>
     <color name="md_theme_light_background">#FAFDFB</color>
+
+
 
 
     <color name="md_theme_dark_primary">#55DBC7</color>
     <color name="md_theme_dark_onPrimary">#003731</color>
+    <color name="md_theme_dark_primaryContainer">#005047</color>
+    <color name="md_theme_dark_onPrimaryContainer">#75F8E3</color>
     <color name="md_theme_dark_secondary">#B1CCC6</color>
     <color name="md_theme_dark_onSecondary">#1C3530</color>
+    <color name="md_theme_dark_secondaryContainer">#334B47</color>
+    <color name="md_theme_dark_onSecondaryContainer">#CDE8E1</color>
     <color name="md_theme_dark_background">#191C1B</color>
 
 
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="blue">#4B82AE</color>
 </resources>
 
