make search and search item

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Theme.FoodPlanner" parent="Theme.Material3.Dark.NoActionBar">
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
+
         <item name="colorPrimary">@color/md_theme_dark_primary</item>
         <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer</item>
         <item name="colorOnPrimary">@color/md_theme_dark_onPrimary</item>
@@ -9,6 +12,7 @@
         <item name="colorSecondaryContainer">@color/md_theme_dark_secondaryContainer</item>
         <item name="colorOnSecondary">@color/md_theme_dark_onSecondary</item>
         <item name="colorOnSecondaryContainer">@color/md_theme_dark_onSecondaryContainer</item>
+        <item name="android:drawableTint">@color/md_theme_dark_onBackground_opacity</item>
 
         <item name="backgroundColor">@color/md_theme_dark_background</item>
 
@@ -20,5 +24,11 @@
         <item name="postSplashScreenTheme">@style/Theme.FoodPlanner</item>
     </style>
 
+    <style name="SearchBarStyle" parent="@style/Widget.Material3.SearchBar">
+        <item name="android:background">@drawable/search_bar_background_dark</item>
+        <item name="android:elevation">6dp</item>
+        <item name="android:textColor">@color/md_theme_dark_onSurface</item>
+        <item name="hintTextColor">@color/md_theme_dark_onSurfaceVariant</item>
+    </style>
 
 </resources>
