--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,7 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources >
     <style name="Theme.FoodPlanner" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
         <item name="colorPrimary">@color/md_theme_light_primary</item>
         <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
         <item name="colorPrimaryContainer">@color/md_theme_light_primaryContainer</item>
@@ -9,6 +11,7 @@
         <item name="colorOnSecondary">@color/md_theme_light_onSecondary</item>
         <item name="colorSecondaryContainer">@color/md_theme_light_secondaryContainer</item>
         <item name="colorOnSecondaryContainer">@color/md_theme_light_onSecondaryContainer</item>
+        <item name="android:drawableTint">@color/md_theme_light_onBackground_opacity</item>
 
         <item name="backgroundColor">@color/md_theme_light_background</item>
 
@@ -20,7 +23,12 @@
         <item name="postSplashScreenTheme">@style/Theme.FoodPlanner</item>
     </style>
 
-
+    <style name="SearchBarStyle" parent="@style/Widget.Material3.SearchBar">
+        <item name="android:background">@drawable/search_bar_background_light</item>
+        <item name="android:elevation">6dp</item>
+        <item name="android:textColor">@color/md_theme_light_onSurface</item>
+        <item name="hintTextColor">@color/md_theme_light_onSurfaceVariant</item>
+    </style>
 
 
 </resources>
