--- a/app/src/main/res/layout/item_show_all.xml
+++ b/app/src/main/res/layout/item_show_all.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/margin_208"
     app:cardCornerRadius="@dimen/radius_8"
     android:layout_margin="@dimen/margin_4"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="@dimen/width_160"
-            android:layout_height="@dimen/height_160"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_208"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop"
             tools:src="@drawable/ic_launcher_background" />
         <TextView
             style="@style/TextAppearance.Material3.BodySmall"
