--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.CategoryFragment">
+    tools:context=".ui.category.CategoryFragment">
 
     <TextView
         android:id="@+id/tile_of_list_category"
