--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -16,7 +16,7 @@
         android:layout_height="@dimen/height_0"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:src="@drawable/cook"
+        tools:src="@drawable/ic_launcher_background"
         app:layout_constraintBottom_toBottomOf="parent"
         android:scaleType="centerCrop"
 
