finish half of home

--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -20,12 +20,13 @@
         android:id="@+id/recycle_favourite"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_0"
+        android:layout_marginHorizontal="@dimen/margin_16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_16"
         android:clipToPadding="false"
-        tools:listitem="@layout/item_category"
+        tools:listitem="@layout/item_favourite"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tile_of_list_favourite"
