--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -34,6 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_item_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
