--- a/app/src/main/res/navigation/nav_grav.xml
+++ b/app/src/main/res/navigation/nav_grav.xml
@@ -7,7 +7,32 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.foodplanner.ui.login.LoginFragment"
+        android:name="com.example.foodplanner.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_showAllFragment"
+            app:destination="@id/showAllFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/showAllFragment"
+        android:name="com.example.foodplanner.ui.show.ShowAllFragment"
+        android:label="fragment_show_all"
+        tools:layout="@layout/fragment_show_all" >
+        <argument
+            android:name="dataitem"
+            app:argType="com.example.foodplanner.data.models.DataItem" />
+        <action
+            android:id="@+id/action_showAllFragment_to_mealFragment"
+            app:destination="@id/mealFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/mealFragment"
+        android:name="com.example.foodplanner.ui.meal.MealFragment"
+        android:label="fragment_meal"
+        tools:layout="@layout/fragment_meal" >
+        <argument
+            android:name="meal"
+            app:argType="com.example.foodplanner.data.models.meal.Meal" />
+    </fragment>
 </navigation>
