--- a/app/src/main/res/navigation/nav_grav.xml
+++ b/app/src/main/res/navigation/nav_grav.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_homeFragment_to_showAllFragment"
             app:destination="@id/showAllFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_mealFragment"
+            app:destination="@id/mealFragment" />
     </fragment>
     <fragment
         android:id="@+id/showAllFragment"
