--- a/app/src/main/res/layout/fragment_show_all.xml
+++ b/app/src/main/res/layout/fragment_show_all.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16"
         android:layout_marginTop="@dimen/margin_16"
+        app:layout_constraintBottom_toBottomOf="@+id/tile_of_list_of_show_all"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/arrow_back" />
