--- a/app/src/main/res/navigation/nav_grav.xml
+++ b/app/src/main/res/navigation/nav_grav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_grav"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/categoryFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -51,5 +51,13 @@
         <argument
             android:name="nameOfItem"
             app:argType="string" />
+        <action
+            android:id="@+id/action_mealsFragment_to_mealFragment"
+            app:destination="@id/mealFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/categoryFragment"
+        android:name="com.example.foodplanner.ui.category.CategoryFragment"
+        android:label="fragment_category"
+        tools:layout="@layout/fragment_category" />
 </navigation>
