--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -30,6 +30,7 @@
             android:id="@+id/text_category_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
             app:layout_constraintBottom_toBottomOf="@id/card_category"
             app:layout_constraintEnd_toEndOf="@id/card_category"
