--- a/app/src/main/res/navigation/nav_grav.xml
+++ b/app/src/main/res/navigation/nav_grav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_grav"
-    app:startDestination="@id/categoryFragment">
+    app:startDestination="@id/favouriteFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -22,7 +22,7 @@
     </fragment>
     <fragment
         android:id="@+id/showAllFragment"
-        android:name="com.example.foodplanner.ui.show.ShowAllFragment"
+        android:name="com.example.foodplanner.ui.showAll.ShowAllFragment"
         android:label="fragment_show_all"
         tools:layout="@layout/fragment_show_all" >
         <argument
@@ -59,5 +59,17 @@
         android:id="@+id/categoryFragment"
         android:name="com.example.foodplanner.ui.category.CategoryFragment"
         android:label="fragment_category"
-        tools:layout="@layout/fragment_category" />
+        tools:layout="@layout/fragment_category" >
+        <action
+            android:id="@+id/action_categoryFragment_to_mealsFragment"
+            app:destination="@id/mealsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/favouriteFragment"
+        android:name="com.example.foodplanner.ui.favourite.FavouriteFragment"
+        android:label="FavouriteFragment" >
+        <action
+            android:id="@+id/action_favouriteFragment_to_mealFragment"
+            app:destination="@id/mealFragment" />
+    </fragment>
 </navigation>
