--- a/app/src/main/res/menu/nav_bar_menu.xml
+++ b/app/src/main/res/menu/nav_bar_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/home"
+<item android:id="@+id/homeF"
     android:icon="@drawable/home_bar"
     android:title="@string/home" />
 
