--- a/app/src/main/res/layout/fragment_meal.xml
+++ b/app/src/main/res/layout/fragment_meal.xml
@@ -1,127 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.meal.MealFragment">
 
-        <ImageView
-            android:id="@+id/add_to_plan"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_16"
-            android:layout_marginTop="@dimen/margin_8"
-            android:src="@drawable/add"
-            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-            app:layout_constraintBottom_toBottomOf="@+id/favourite_icon_single_meal"
+    <TextView
+        android:id="@+id/tile_of_meal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_16"
+        android:ellipsize="end"
+        android:gravity="center|top"
+        android:maxEms="5"
+        android:singleLine="true"
+        android:textSize="@dimen/font_size_28"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Meal....." />
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/favourite_icon_single_meal" />
-        <androidx.constraintlayout.utils.widget.ImageFilterView
-            android:id="@+id/image_single_meal"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_170"
-            android:layout_marginHorizontal="@dimen/margin_16"
-            android:layout_marginTop="@dimen/margin_16"
-            android:scaleType="centerCrop"
-            tools:src="@drawable/ic_launcher_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:roundPercent="0.2" />
+    <ImageView
+        android:id="@+id/back_from_meal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_16"
+        app:layout_constraintBottom_toBottomOf="@+id/tile_of_meal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tile_of_meal"
+        app:srcCompat="@drawable/arrow_back" />
 
-        <TextView
-            android:id="@+id/name_single_meal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_16"
-            android:layout_marginTop="@dimen/margin_12"
-            android:textAlignment="center"
-            android:maxLines="1"
-            android:ellipsize="middle"
-            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
-            app:layout_constraintStart_toEndOf="@id/add_to_plan"
-            app:layout_constraintEnd_toStartOf="@id/favourite_icon_single_meal"
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/image_single_meal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_170"
+        android:layout_marginHorizontal="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_8"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tile_of_meal"
+        app:roundPercent="0.2"
+        tools:src="@drawable/ic_launcher_background" />
 
-            app:layout_constraintTop_toBottomOf="@id/image_single_meal"
-            tools:text="sdfsdfsdfds" />
-        <TextView
-            android:id="@+id/category_single_meal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_16"
-            android:layout_marginTop="@dimen/margin_4"
-            android:textAlignment="center"
-            android:maxLines="1"
-            android:ellipsize="middle"
-            app:layout_constraintStart_toEndOf="@id/add_to_plan"
-            app:layout_constraintEnd_toStartOf="@id/favourite_icon_single_meal"
+    <ImageView
+        android:id="@+id/add_to_plan"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_8"
+        android:src="@drawable/add"
+        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+        app:layout_constraintBottom_toBottomOf="@+id/favourite_icon_single_meal"
 
-            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
-            app:layout_constraintTop_toBottomOf="@id/name_single_meal"
-            tools:text="sdfsdfsdfds" />
-        <ImageView
-            android:id="@+id/favourite_icon_single_meal"
-            android:layout_width="@dimen/width_0"
-            android:layout_marginTop="@dimen/margin_12"
-            android:layout_marginHorizontal="@dimen/margin_16"
-            android:src="@drawable/favorite"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_single_meal"
-            />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/favourite_icon_single_meal" />
 
 
-        <com.google.android.material.button.MaterialButtonToggleGroup
-            android:id="@+id/toggle_group_single_meal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_16"
-            android:layout_marginTop="@dimen/margin_16"
-            app:selectionRequired="true"
-            app:singleSelection="true"
-            android:weightSum="2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/category_single_meal"
-           >
+    <TextView
+        android:id="@+id/name_single_meal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_12"
+        android:ellipsize="middle"
+        android:maxLines="1"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+        app:layout_constraintEnd_toStartOf="@id/favourite_icon_single_meal"
+        app:layout_constraintStart_toEndOf="@id/add_to_plan"
 
-            <com.google.android.material.button.MaterialButton
+        app:layout_constraintTop_toBottomOf="@id/image_single_meal"
+        tools:text="sdfsdfsdfds" />
+
+    <TextView
+        android:id="@+id/category_single_meal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_4"
+        android:ellipsize="middle"
+        android:maxLines="1"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
+        app:layout_constraintEnd_toStartOf="@id/favourite_icon_single_meal"
+
+        app:layout_constraintStart_toEndOf="@id/add_to_plan"
+        app:layout_constraintTop_toBottomOf="@id/name_single_meal"
+        tools:text="sdfsdfsdfds" />
+
+    <ImageView
+        android:id="@+id/favourite_icon_single_meal"
+        android:layout_width="@dimen/width_0"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_12"
+        android:src="@drawable/favorite"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_single_meal" />
+
+
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/toggle_group_single_meal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_16"
+        android:weightSum="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/category_single_meal"
+        app:selectionRequired="true"
+        app:singleSelection="true">
+
+        <com.google.android.material.button.MaterialButton
 
             android:id="@+id/button_ingredient_single_meal"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/ingredient" />
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/ingredient" />
 
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_instructions_single_meal"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/instructions" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_instructions_single_meal"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/instructions" />
 
 
-        </com.google.android.material.button.MaterialButtonToggleGroup>
+    </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_single_meal"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/margin_8"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toggle_group_single_meal"
+        tools:listitem="@layout/item_ingredient" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_single_meal"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin_8"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toggle_group_single_meal"
-            tools:listitem="@layout/item_ingredient" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
